# LitManagePro

./: ChangeLog.md  README.md  components.d.ts  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  config-type.ts  main.ts  message.ts  router.ts  style.css  vditor-fix.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_errors.rs  config.rs  init.rs  lib.rs  main.rs
src-tauri/src/dtos/: doc.rs  doc_tags.rs  mod.rs  note.rs  tag.rs  tag_card.rs
src-tauri/src/entities/: doc_and_tag.rs  document.rs  mod.rs  note.rs  prelude.rs  table.rs  tag.rs  tag_group.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/ai/: mod.rs
src-tauri/src/services/commands/: config.rs  doc.rs  mod.rs  note.rs  tag.rs
src-tauri/src/services/curd/: doc_and_tag.rs  document.rs  mod.rs  note.rs  tag.rs  tag_group.rs
src-tauri/src/services/util/: file.rs  mod.rs  pdf.rs
src/components/: TitleBar.vue
src/components/main/: Detail.vue  MainType.ts  Table.vue  TagCard.vue  TagComplete.vue  TitleBar.vue  Tree.vue  main-type.ts
src/components/note/: NoteTabsBar.vue  NoteTitleBar.vue  VditorNote.vue
src/components/setting/: Appearance.vue  EditableShortcutKey.vue  Keymap.vue  TitleBar.vue
src/layouts/: Footer.vue  MainContent.vue  RightBar.vue
src/stroe/: config.ts  doc.ts  note-tabs.ts  tag.ts
src/util/: AutoCompleteTag.vue  CustomModal.vue  EditableText.vue  open-note-window.ts
src/windows/: DragImport.vue  Main.vue  MainWindow.vue  Note.vue  NoteList.vue  Setting.vue
