[package]
name = "litmanagepro"
version = "0.1.0"
description = "现代化文献管理工具"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "litmanagepro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2.2.5"
tauri-plugin-os = "2.2.0"

tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process"] }

reqwest = { version = "0.11", features = ["json", "multipart"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = {version = "1.1.5",features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ,"debug-print" ] }

thiserror = "2.0.11"
anyhow = "1.0.96"


tracing-appender = "0.2.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "time", "std", "chrono", "env-filter", "registry"] }
time = { version = "0.3.37", features = ["macros"] }
log = "0.4.26"
#chrono = "0.4.39"

lopdf = "0.35.0"
pdf-extract = "0.8.2"

open = "5.3.2"
file_icon_provider = "0.4.0"
image = "0.23.0"
rand = "0.9.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"


